# swagger.yaml
@@ -702,6 +702,16 @@ paths:
         - credential
 
   /api/credentialoffer:
+    get:
+      summary: 'List credential offers'
+      description: 'List credential offers'
+      parameters:
+        - $ref: '#/parameters/walletHeader'
+      responses:
+        '200':
+          description: ''
+      tags:
+        - credential
     post:
       summary: 'Create a credential offer'
       description: 'Create a credential offer'
@@ -716,7 +726,42 @@ paths:
       tags:
         - credential
 
+  /api/credentialoffer/{id}:
+    parameters:
+      - description: 'A unique string value identifying a credential offer.'
+        in: path
+        name: id
+        required: true
+        type: string
+      - $ref: '#/parameters/walletHeader'
+    get:
+      summary: 'Retrieve a credential offer'
+      description: 'Retrieve a credential offer'
+      responses:
+        '200':
+          description: ''
+      tags:
+        - credential
+    delete:
+      summary: 'Delete a credential offer'
+      description: 'Delete a credential offer'
+      responses:
+        '204':
+          description: ''
+      tags:
+        - credential
+
   /api/credentialrequest:
+    get:
+      summary: 'List credential requests'
+      description: 'List credential requests'
+      parameters:
+        - $ref: '#/parameters/walletHeader'
+      responses:
+        '200':
+          description: ''
+      tags:
+        - credential
     post:
       summary: 'Accept credential offer and create credential request'
       description: 'Accept credential offer and create credential request'
@@ -731,17 +776,27 @@ paths:
       tags:
         - credential
 
-  /api/credentialissue:
-    post:
-      summary: 'Issue a credential'
-      description: 'Issue a credential'
-      parameters:
-        - in: body
-          name: data
-          schema:
-            $ref: '#/definitions/credentialissue_post'
+  /api/credentialrequest/{id}:
+    parameters:
+      - description: 'A unique string value identifying a credential request.'
+        in: path
+        name: id
+        required: true
+        type: string
+      - $ref: '#/parameters/walletHeader'
+    get:
+      summary: 'Retrieve a credential request'
+      description: 'Retrieve a credential request'
       responses:
-        '201':
+        '200':
+          description: ''
+      tags:
+        - credential
+    delete:
+      summary: 'Delete a credential request'
+      description: 'Delete a credential request'
+      responses:
+        '204':
           description: ''
       tags:
         - credential
@@ -813,6 +868,16 @@ paths:
         - credential
 
   /api/proofrequest:
+    get:
+      summary: 'List proof requests'
+      description: 'List proof requests'
+      parameters:
+        - $ref: '#/parameters/walletHeader'
+      responses:
+        '200':
+          description: ''
+      tags:
+        - proof
     post:
       summary: 'Create a proof request'
       description: 'Create a proof request'
@@ -823,6 +888,31 @@ paths:
             $ref: '#/definitions/proofrequest_post'
       responses:
         '201':
+          description: ''
+      tags:
+        - proof
+
+  /api/proofrequest/{id}:
+    parameters:
+      - description: 'A unique string value identifying a proof request.'
+        in: path
+        name: id
+        required: true
+        type: string
+      - $ref: '#/parameters/walletHeader'
+    get:
+      summary: 'Retrieve a proof request'
+      description: 'Retrieve a proof request'
+      responses:
+        '200':
+          description: ''
+      tags:
+        - proof
+    delete:
+      summary: 'Delete a proof request'
+      description: 'Delete a proof request'
+      responses:
+        '204':
           description: ''
       tags:
         - proof
